--- a/style.css
+++ b/style.css
@@ -36,14 +36,48 @@ button {
 
 form {
     display: flex;
+
+    padding: 48px;
+}
+
+.habits {
+    margin-top: 56px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.habit {
+    width: 64px;
+    height: 64px;
+
+    font-size: 32px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .days {
     display: flex;
+    gap: 48px;
+    margin-left: 32px;
 }
+
 .day {
     display: flex;
     flex-direction: column;
+    gap: 24px;
+}
+
+.day div {
+    margin-bottom: 8px;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    line-height: 125%;
+    color: #A1A1AA;
 }
 
 input {
