--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 48px;
+
+    position: fixed;
+    width: 100%;
+    background-color: #09090A;
 }
 
 button {
@@ -34,10 +38,11 @@ button {
     line-height: 125%;
 }
 
-form {
+#form-habits {
     display: flex;
 
-    padding: 48px;
+    padding: 182px 48px 48px;
+    width: fit-content;
 }
 
 .habits {
@@ -96,4 +101,10 @@ input {
 input:checked {
     background: #8B5CF6;
     border: 2px solid #A78BFA;
+}
+
+@media (max-width: 570px) {
+    button div {
+        display: none;
+    }
 }
